# PP-2655 Fix Inconsistent Dropdown style on Firefox
## Problem
- On Firefox, selects would have a native selector and mulit-selects a fancy css one

## Cause
- Our select styling was restricted to webkit

## Solution
- Our select styling has been unrestricted for now

--- a/app/assets/sass/gov-uk-overrides/_forms.scss
+++ b/app/assets/sass/gov-uk-overrides/_forms.scss
@@ -1,11 +1,10 @@
 select.form-control {
-  @include webkit-only {
+    // TODO: restrict to webkit only once PP-2835 has been done
     border-radius: 0;
     background-image: url("/public/images/dd-arrow.svg");
     background-repeat: no-repeat;
     background-position: right 4px top 2px;
-    -webkit-appearance: none;
-  }
+    @include appearance(none);
 }
 
 textarea {
